replace icons manifest + remove keepMounted on TaskOptions and markup optimization

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <title>Buddy App</title>
-    <link rel="shortcut icon" type="image/png" sizes="196x196" href="favicon-196.png">
+    <link rel="icon" type="image/png" sizes="196x196" href="favicon-196.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="A PWA app that aims to help Buddy and Newbie go through the induction process.">
