fix apple icon url at index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
     <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/apple-splash-750-1334.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
     <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/apple-splash-640-1136.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="apple-icon-167.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="PUBLIC_URL%/apple-icon-180.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="PUBLIC_URL%/apple-icon-167.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="PUBLIC_URL%/apple-icon-152.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="PUBLIC_URL%/apple-icon-120.png">
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
